feat(ai): 实现 AI 流式对话接口，支持增量消息推送和错误处理